--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="service-card">
                 <h3>Behavioral Therapy Programs</h3>
                 <p>Specialized interventions for ADHD, autism, and behavioral challenges using ABA techniques</p>
-                <a href="Beahvioral therapy/index.html" class="learn-more">Learn More About Behavioral Therapy →</a>
+                <a href="Behavioral therapy/index.html" class="learn-more">Learn More About Behavioral Therapy →</a>
             </div>
             
             <!-- Speech Therapy -->
