--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 <meta name="description" content="Expert tips on child therapy, behavioral strategies, and speech development for parents in Visakhapatnam. Trust Vignan Centre for guidance.">
 <title>Child Therapy Blog | Behavioral & Speech Therapy Tips for Parents | Vignan Centre Visakhapatnam</title>
   <!-- Google Fonts -->
+  <link rel="stylesheet" href="style.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto:wght@300;500;700&display=swap"
     rel="stylesheet">
